New Features and Important Changes in GammaLib 1.7.0

29 June 2020


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- GResponseCache
- GModelSpatialRadialRing
- GModelSpectralTable
- GSPIEventBin
- GSPIEventCube
- GSPIInstDir
- GSPIModelDataSpace
- GSPIObservation
- GSPIResponse

The following classes have been removed:
- GCTAResponseCache

The following classes have been renamed:
- none

The following methods have been added:
- GTime.datetime() - Datetime conversion in Python interface
- GTime.julian_epoch() - Returns Julian epoch for time
- GGti::overlap(GTime&, GTime&) - Compute overlap with time interval
- GInstDir::hash() - Returns a cached value
- GObservations::npred(string&, string&) - Compute predicted number of events
- GObservations::npred(GModel&, string&) - Compute predicted number of events 
- GObservations::remove_response_cache() - Remove response cache for all models
- GObservations::remove_response_cache(string&) - Remove response cache for model
- GObservation::remove_response_cache(string&) - Remove response cache for model
- GSkyDir::precess() - Precess sky position to epoch
- GSkyDir::sun() - Set sky position of Sun
- GSkyDir::moon() - Set sky position of Moon
- GSkyDir::rotate() - Rotate sky direction (radians variant)
- GSkyDir::GSkyDir(GVector&) - Sky direction vector constructor
- GSkyMap::extract() - Extract section of sky map
- GSkyRegionCircle::operator==() - Equality operator
- GSkyRegionCircle::operator!=() - Non-equality operator 
- GModelPar::has_factor_min() - Test if parameter has factor minimum
- GModelPar::has_factor_max() - Test if parameter has factor maximum
- GModelPar::remove_factor_min - Remove factor minimum
- GModelPar::remove_factor_max - Remove factor maximum